Package: startup
================

Version: 0.9.0-9000 [2018-01-11]

NEW FEATURES:

 * is_debug_on() returns true if the startup debug mode is on.  To control
   the debug mode, see ?startup::startup.

 * Add flag 'rstudioterm' to sysinfo() indicating whether R runs in an
   RStudio Terminal or not.  To test whether R runs via the RStudio Console,
   use 'rstudio'.

BUG FIX:

 * startup::restart() would not work in the RStudio Terminal.  By design, it
   does not work in the RStudio Console.
 

Version: 0.9.0 [2018-01-09]

NEW FEATURES:

 * Added restart() for restarting the current R session.  It can also be used
   to adjust various R command-line arguments and environment variables, e.g.
   restart(as = "R CMD build") mimics the 'R CMD build' setup as far as
   possible.


Version: 0.8.0 [2017-10-18]

NEW FEATURES:

 * Added startup::current_script() which returns the .Rprofile.d/ pathname
   that is currently processed by startup::startup().
   
 * Added flag 'rice' to sysinfo() indicating whether R runs via Rice or not,
   meaning it can be used as a file and directory name tag, e.g. rice=TRUE.
 
 * startup(debug = TRUE) outputs much more information on what has taken place
   and what will take place through R's startup process.

 * startup() gained argument 'check' for controlling whether the content of
   startup files should be validated or not.

 * check(), and therefore also startup(check = TRUE), warns if R_LIBS,
   R_LIBS_SITE, or R_LIBS_USER specifies non-existing directory.
   

DEPRECATED AND DEFUNCT:

 * DEFUNCT: renviron() and rprofile() are defunct.  Removed api()$renviron()
   and api()$rprofile().  Use renviron_d() and rprofile_d() instead.

BUG FIXES:

 * Now install(backup = TRUE) guarantees that the .Rprofile file is backed up,
   otherwise an error is produced.  Previously it could silently fail if a
   backup file with the exact same name already existed.

Version: 0.7.0 [2017-09-04]

SIGNIFICANT CHANGES:
