@@ -88,8 +88,7 @@ The following `startup::sysinfo()` keys are available for conditional inclusion 
   - `interactive` - (logical) whether running R interactively or not (= `interactive()`)
   - `ess`         - (logical) whether running R in [Emacs Speaks Statistics (ESS)] or not
   - `rice`        - (logical) whether running R in [rice] or not
-  - `rstudio`     - (logical) whether running R in [RStudio] Console or not
-  - `rstudioterm` - (logical) whether running R in [RStudio] Terminal or not
+  - `rstudio`     - (logical) whether running R in [RStudio] or not
   - `wine`        - (logical) whether running R on Windows via [Linux Wine] or not
 
 You can also include files conditionally on whether a package is installed or not:
@@ -103,6 +102,14 @@ Any further `<key>=<value>` specifications with keys matching none of the above 
 To condition on more than one key, separate `<key>=<value>` pairs by commas, e.g. `~/.Rprofile.d/work,interactive=TRUE,os=windows.R`.  This also works for directory names.  For instance, `~/.Rprofile.d/os=windows/work,interactive=TRUE.R` will be processed if running on Windows and in interactive mode.  Multiple packages may be specified.  For instance, `~/.Rprofile.d/package=devtools,package=future.R` will be used only if both the devtools and the future packages are installed.
 
 It is also possible to negate a conditional filename test by using the `<key>!=<value>` specification.  For instance, `~/.Rprofile.d/package=doMC,os!=windows.R` will be processed if package `doMC` is installed and the operating system is not Windows.
+
+
+### Secrets
+
+The `startup::sysinfo()` field `secrets` takes the (character) value of environment variable 'R_STARTUP_SECRETS'.  If the latter is not set or empty, then `secrets` is `"FALSE"`.  This can be used to automatically filter out files and folders for which the `secrets` does not take a specific value.  For instance, files under `~/.Renviron.d/secrets=banana/` will only be included if environment variable `R_STARTUP_SECRETS` equals `banana` when R starts, e.g.
+```sh
+$ R_STARTUP_SECRETS=banana R
+```
 
 
 ## Known limitations
